apps/obsidian-livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync
spec:
  selector:
    app: obsidian-livesync
  ports:
    - port: 5984
      targetPort: 5984
