apps/obsidian-livesync/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: obsidian-livesync
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`private-obsidian.shinbunbun.com`)
      kind: Rule
      services:
        - name: obsidian-livesync
          port: 5984
